# husar_sandbox

./: README.md  sasa
dla_weclewa/: CMakeLists.txt  mainpage.dox  manifest.xml
dla_weclewa/nodes/: .praca_domowa.py.swp  praca_domowa.msg  praca_domowa.py
dla_weclewa/src/: calculate_position.py  dummy_navigation.py  dummy_sensor.py  setvelocity.py
lrstwut_dead_reckoning/: CMakeLists.txt  Makefile~  mainpage.dox  manifest.xml
lrstwut_dead_reckoning/docs/: almost_ideal_node.odt
lrstwut_dead_reckoning/include/: dead_reckoning.h
lrstwut_dead_reckoning/src/: dead_reckoning.cpp  (+1 more)
lrstwut_pc_to_ls/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mainpage.dox  manifest.xml
nav_new_py/: CMakeLists.txt~  mainpage.dox  manifest.xml
pmdCam/: .cproject  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  manifest.xml  ui_window.h
pmdCam/include/: moc_pmdGUImodel.cxx  moc_pmdGUIview.cxx  moc_qtros.cxx  o3dcam.hpp  pmdCam.h  pmdGUImodel.h  pmdGUIview.hpp  system3d.hpp  systemController.hpp
pmdCam/include/O3DClientLib/.svn/: all-wcprops  entries
pmdCam/include/O3DClientLib/include/: O3DClient.hpp  o3dCompleteData.hpp  o3dConfig.h.in  o3dDataTypes.hpp
pmdCam/include/O3DClientLib/include/.svn/: all-wcprops  entries
pmdCam/include/O3DClientLib/include/.svn/text-base/: o3dCameraSettings.hpp.svn-base  o3dConfig.h.svn-base
pmdCam/include/O3DClientLib/include/communication/: CPcomm3dErrors.h  clientsocket.h  structs.h
pmdCam/include/O3DClientLib/include/communication/.svn/: all-wcprops  entries
pmdCam/include/O3DClientLib/include/communication/.svn/text-base/: clientsocket.h.svn-base
pmdCam/include/forms/: window.ui
pmdCam/launch/: camera_node.launch  usbcam.launch
pmdCam/msg/: data_flow.msg  image_box.msg  pmd_settings.msg
pmdCam/msg_gen/cpp/include/pmdCam/: data_flow.h  image_box.h  pmd_settings.h
pmdCam/msg_gen/lisp/: _package.lisp  _package_data_flow.lisp  _package_image_box.lisp  _package_pmd_settings.lisp  data_flow.lisp  image_box.lisp  pmdCam-msg.asd  pmd_settings.lisp
pmdCam/src/: ifmcam.cpp  ifmoffline.cpp  o3dcam.cpp  pmdCamServer.cpp  pmdGUIcontroller.cpp  pmdGUImodel.cpp  pmdGUIview.cpp  qtros.cpp  system3d.cpp  systemController.cpp
pmdCam/src/O3DClientLib/.svn/text-base/: CMakeLists.txt.svn-base
pmdCam/src/O3DClientLib/source/: O3DClient.cpp  o3dCameraSettings.cpp  o3dDataTypes.cpp
pmdCam/src/O3DClientLib/source/.svn/: all-wcprops  entries
pmdCam/src/O3DClientLib/source/.svn/text-base/: O3DClient.cpp.svn-base  o3dCompleteData.cpp.svn-base
pmdCam/src/O3DClientLib/source/communication/: clientsocket.cpp
pmdCam/src/O3DClientLib/source/communication/.svn/: all-wcprops  entries
pmdCam/src/pmdCam/msg/: __init__.py  _data_flow.py  _image_box.py  _pmd_data_flow.py  _pmd_settings.py
test_nawigacji/: .manifest.xml.swo  .manifest.xml.swp  CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~  odometry_publisher.cpp~
(+11 files in other folders)
